tests/error/pointer_outside_class.gw
static typedef void (my_function)(){}
